# merco

./: Cargo.toml  README.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: AddStrategyModal.tsx  CreateFileModal.tsx  FileContextMenu.tsx  FileTree.tsx  Navbar.tsx  StrategyEditor.tsx
frontend/src/pages/: Backtest.tsx  Live.tsx  MarketData.tsx  Optimization.tsx  Settings.tsx  Strategy.tsx
frontend/src/services/: api.ts
frontend/src/types/: AddStrategyRequest.ts  BacktestRequest.ts  DeleteSourceQuery.ts  FileNode.ts  FileNodeType.ts  GetSourceQuery.ts  GetSourceResponse.ts  MoveSourceQuery.ts  SaveSourceQuery.ts
merco/: Cargo.toml
merco/migrations/: 001_create_candles_table.sql
merco/src/: app.rs  config.rs  errors.rs  exchange.rs  handlers.rs  lib.rs  main.rs  models.rs  strategy.rs  tasks.rs  utils.rs
merco/src/exchange/: ccxt.rs
merco/src/handlers/: candles.rs  info.rs  source.rs  strategy.rs  tasks.rs
merco/src/models/: candles.rs
merco/src/services/: candles.rs
merco/src/strategy/: context.rs  manager.rs
merco/src/tasks/: backtest.rs  fetch_candles.rs  manager.rs  types.rs
merco/templates/strategy/member/: Cargo.toml.template
merco/templates/strategy/member/src/: lib.rs.template
strategy-macro/: Cargo.toml
strategy-macro/src/: lib.rs
